--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shashinoor Ghimire</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+        <div class="hero">
+            <nav>
+                <img src="images/logo-2.png">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                </ul>
+            </nav>
+            <div class="detel">
+                <h1>I'm Shashinoor <span>Ghimire</span></h1>
+                <p>This is my website to display my portfolio and
+                    <br>to add some clicks of mine.
+                </p>
+                <a href="#">Downlaod Cv</a>
+                <div class="images">
+                    <img src="images/shape.png" class="shape">
+                    <img src="images/man3.png" class="man">
+                </div>
+            </div>
+        </div>
 </body>
 </html>
