--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </nav>
             <div class="detel">
                 <h1>I'm Shashinoor <span>Ghimire</span></h1>
-                <p>This is my website to display my portfolio and
-                    <br>to add some clicks of mine.
+                <p>I use this site to display my portfolio and
+                    <br>to learn.
                 </p>
                 <a href="#">Downlaod Cv</a>
                 <div class="images">
