--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <nav>
                 <img src="images/logo-2.png">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="https://www.facebook.com">HOME</a></li>
+                    <li><a href="https://www.facebook.com">ABOUT</a></li>
+                    <li><a href="https://www.facebook.com">PORTFOLIO</a></li>
                 </ul>
             </nav>
             <div class="detel">
@@ -23,7 +23,7 @@
                 <p>I use this site to display my portfolio and
                     <br>to learn.
                 </p>
-                <a href="#">Downlaod Cv</a>
+                <a href="https://www.facebook.com">Downlaod Cv</a>
                 <div class="images">
                     <img src="images/shape.png" class="shape">
                     <img src="images/man3.png" class="man">
