--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <p><span2>Shashinoor Ghimire © 2022 </span2></p>
+        </div>
 </body>
 </html>
