--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="footer">
-            <p><span2>Shashinoor Ghimire © 2022 </span2></p>
+            <p>Shashinoor Ghimire © 2022</p>
         </div>
 </body>
 </html>
