--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <nav>
                 <img src="images/logo-2.png">
                 <ul>
-                    <li><a href="https://www.facebook.com">HOME</a></li>
+                    <li><a href="#">HOME</a></li>
                     <li><a href="https://www.facebook.com">ABOUT</a></li>
-                    <li><a href="https://www.facebook.com">PORTFOLIO</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
                 </ul>
             </nav>
             <div class="detel">
