--- a/index.html
+++ b/index.html
@@ -1,37 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="images/brightness.png">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shashinoor</title>
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="brightness.png">
+  <title>Shashinoor</title>
 </head>
 <body>
-        <div class="hero">
-            <nav>
-                <img src="images/logo-2.png">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="https://www.facebook.com">ABOUT</a></li>
-                    <li><a href="#">PORTFOLIO</a></li>
-                </ul>
-            </nav>
-            <div class="detel">
-                <h1>I'm Shashinoor <span>Ghimire</span></h1>
-                <p>I use this site to display my portfolio and
-                    <br>to learn.
-                </p>
-                <a href="https://www.facebook.com">Downlaod Cv</a>
-                <div class="images">
-                    <img src="images/shape.png" class="shape">
-                    <img src="images/man3.png" class="man">
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <p>Shashinoor Ghimire © 2022</p>
-        </div>
+  <div class="container1">
+      <div class="picture">
+
+      </div>
+      
+      <div class="texts">
+        SHASHINOOR
+      </div>
+      <div class="text2">
+        GHIMIRE
+      </div>
+      <div class="text3">
+        Coder/Designer
+      </div>
+  </div>
+
+
+  <div class="container2">
+    <div class="images">
+
+    </div>
+    <div class="skills">
+    WHAT I CAN DO
+    </div>
+    <div class="skills2">
+Skills & Proficiencies
+    </div>
+    <div class="skill1">Front-End</div>
+    <div class="skill2">Back-End</div>
+    <div class="skill3">Adaptability</div>
+    <div class="coding"></div>
+    <div class="designing"></div>
+    <div class="patience"></div>
+    <div class="p1"></div>
+    <div class="p2"></div>
+    <div class="p3"></div>
+  </div>
+
+
+
+
+  <div class="container3">
+    <div class="reach">
+      Reach out!
+    </div>
+    <div class="text1">
+      <div class="name">
+        <br>Shashinoor Ghimire
+      </div><br>
+          shashinoorghimire13@gmail.com<br>
+          <a href="https://www.shashinoorghimire.com.np/"" target="_blank"><div class="site">www.shashinoorghimire.com.np</div></a>
+    </div>
+    <a href="https://github.com/Shashinoor13?tab=repositories" target="_blank"><div class="projects">
+      My Projects
+    </div></a>
+    <a href="notes.rtf"><div class="button">
+       Find my resume here.
+    </div></a>
+    <div class="logos">
+      <a href="https://www.facebook.com/Kanchaan.shashi/"" target="_blank"><div class="facebook"></div></a>
+      <a href="https://www.instagram.com/_shashinoor/"" target="_blank"><div class="instagram"></div></a>
+      <a href="https://twitter.com/g_shashinoor"" target="_blank"><div class="twitter"></div></a>
+    </div>
+  </div>
 </body>
 </html>
